--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -605,24 +605,24 @@ msgid "Covered Elements"
 msgstr "Eléments Couverts"
 
 msgctxt "field:document.receive.request,tmp_0:"
-msgid "Claim"
-msgstr "Sinistre"
+msgid "Contract"
+msgstr "Contrat"
 
 msgctxt "field:expense,amount:"
 msgid "Amount"
 msgstr "Montant"
 
 msgctxt "field:expense,create_date:"
-msgid ""
-msgstr " "
+msgid "Create Date"
+msgstr "Date de Création"
 
 msgctxt "field:expense,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
 msgctxt "field:expense,create_uid:"
-msgid ""
-msgstr " "
+msgid "Create User"
+msgstr "Create User"
 
 msgctxt "field:expense,currency:"
 msgid "Currency"
@@ -637,8 +637,8 @@ msgid "Currency Symbol"
 msgstr "Symbole de la Devise"
 
 msgctxt "field:expense,id:"
-msgid ""
-msgstr " "
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:expense,kind:"
 msgid "Kind"
@@ -649,20 +649,20 @@ msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
 msgctxt "field:expense,rec_name:"
-msgid ""
-msgstr " "
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:expense,service:"
 msgid "Contract Service"
 msgstr "Prestation Fournie"
 
 msgctxt "field:expense,write_date:"
-msgid ""
-msgstr " "
+msgid "Write Date"
+msgstr "Date de mise à jour"
 
 msgctxt "field:expense,write_uid:"
-msgid ""
-msgstr " "
+msgid "Write User"
+msgstr " Mis à jour par"
 
 msgctxt "field:expense,xml_id:"
 msgid "XML Id"
@@ -717,8 +717,8 @@ msgid "Contract Service"
 msgstr "Prestation Fournie"
 
 msgctxt "model:expense,name:"
-msgid ""
-msgstr " "
+msgid "Expense"
+msgstr "Dépense"
 
 msgctxt "model:ir.action,name:act_contract_relate_form"
 msgid "Contracts"
