--- a/modules/process/locale/fr_FR.po
+++ b/modules/process/locale/fr_FR.po
@@ -602,118 +602,6 @@ msgctxt "selection:process.transition,method_kind:"
 msgid "Replace Step Methods"
 msgstr "Remplacer les Méthodes de l'Etape"
 
-msgctxt "view:claim:"
-msgid "==> Clôture"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "==> Documents"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "==> Décl. du Préjudice"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "==> Déclarant"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "==> Prestations"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "==> Rechute"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "==> Remboursement"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "==> Réouverture"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "==> Validation"
-msgstr ""
-
-msgctxt "view:claim:"
-msgid "Clôture"
-msgstr "Clôture"
-
-msgctxt "view:claim:"
-msgid "Complete"
-msgstr "Terminer"
-
-msgctxt "view:claim:"
-msgid "Documents"
-msgstr "Documents"
-
-msgctxt "view:claim:"
-msgid "Décl. du Préjudice"
-msgstr "Décl. du Préjudice"
-
-msgctxt "view:claim:"
-msgid "Déclarant"
-msgstr "Déclarant"
-
-msgctxt "view:claim:"
-msgid "Déclaration de Sinistre"
-msgstr "Déclaration de Sinistre"
-
-msgctxt "view:claim:"
-msgid "Losses"
-msgstr "Préjudices"
-
-msgctxt "view:claim:"
-msgid "Next"
-msgstr "Suivant"
-
-msgctxt "view:claim:"
-msgid "Prestations"
-msgstr "Prestations"
-
-msgctxt "view:claim:"
-msgid "Previous"
-msgstr "Précédent"
-
-msgctxt "view:claim:"
-msgid "Rechute"
-msgstr "Rechute"
-
-msgctxt "view:claim:"
-msgid "Remboursement"
-msgstr "Remboursement"
-
-msgctxt "view:claim:"
-msgid "Réouverture"
-msgstr "Réouverture"
-
-msgctxt "view:claim:"
-msgid "Réouverture De Sinistre"
-msgstr "Réouverture De Sinistre"
-
-msgctxt "view:claim:"
-msgid "The current record completed the current process, please go ahead"
-msgstr "Processus Terminé. Commencez une nouvelle tâche"
-
-msgctxt "view:claim:"
-msgid "Validation"
-msgstr "Validation"
-
-msgctxt "view:contract:"
-msgid "==> Adhérent"
-msgstr ""
-
-msgctxt "view:contract:"
-msgid "==> Affiliations"
-msgstr ""
-
-msgctxt "view:contract:"
-msgid "==> Cotisations"
-msgstr ""
-
 msgctxt "view:contract:"
 msgid "==> Documents"
 msgstr ""
@@ -724,10 +612,6 @@ msgstr ""
 
 msgctxt "view:contract:"
 msgid "==> Personnes Couvertes"
-msgstr ""
-
-msgctxt "view:contract:"
-msgid "==> Populations"
 msgstr ""
 
 msgctxt "view:contract:"
@@ -743,19 +627,7 @@ msgid "==> Tarif"
 msgstr ""
 
 msgctxt "view:contract:"
-msgid "==> Taux"
-msgstr ""
-
-msgctxt "view:contract:"
-msgid "==> Validation de l'avenant"
-msgstr ""
-
-msgctxt "view:contract:"
 msgid "==> Validation du contrat"
-msgstr ""
-
-msgctxt "view:contract:"
-msgid "==> Validation du contrat Collectif"
 msgstr ""
 
 msgctxt "view:contract:"
@@ -767,28 +639,12 @@ msgid "Accounting"
 msgstr "Comptabilité"
 
 msgctxt "view:contract:"
-msgid "Adhérent"
-msgstr "Adhérent"
-
-msgctxt "view:contract:"
-msgid "Affiliations"
-msgstr "Affiliations"
-
-msgctxt "view:contract:"
-msgid "Avenant"
-msgstr "Avenant"
-
-msgctxt "view:contract:"
 msgid "Billing"
 msgstr "Cotisation"
 
 msgctxt "view:contract:"
 msgid "Calculate Prices"
 msgstr "Calculer les Primes"
-
-msgctxt "view:contract:"
-msgid "Calculer les Taux"
-msgstr ""
 
 msgctxt "view:contract:"
 msgid "Complementary Data"
@@ -799,16 +655,8 @@ msgid "Complete"
 msgstr "Terminer"
 
 msgctxt "view:contract:"
-msgid "Cotisations"
-msgstr "Cotisations"
-
-msgctxt "view:contract:"
 msgid "Covered Elements"
 msgstr "Eléments Couverts"
-
-msgctxt "view:contract:"
-msgid "Covered Elements/Options"
-msgstr "Eléments Couverts/Garanties"
 
 msgctxt "view:contract:"
 msgid "Create Loan"
@@ -823,6 +671,10 @@ msgid "Garanties"
 msgstr "Garanties"
 
 msgctxt "view:contract:"
+msgid "Modifier Garanties"
+msgstr ""
+
+msgctxt "view:contract:"
 msgid "Next"
 msgstr "Suivant"
 
@@ -835,16 +687,8 @@ msgid "Personnes Couvertes"
 msgstr "Personnes Couvertes"
 
 msgctxt "view:contract:"
-msgid "Populations"
-msgstr "Populations"
-
-msgctxt "view:contract:"
 msgid "Previous"
 msgstr "Précédent"
-
-msgctxt "view:contract:"
-msgid "Processus de souscription individuel"
-msgstr "Processus de souscription individuel"
 
 msgctxt "view:contract:"
 msgid "Produit"
@@ -855,10 +699,6 @@ msgid "Prêt"
 msgstr "Prêt"
 
 msgctxt "view:contract:"
-msgid "Souscription Contrat Collectif"
-msgstr "Souscription Contrat Collectif"
-
-msgctxt "view:contract:"
 msgid "Souscription Emprunteur"
 msgstr "Souscription Emprunteur"
 
@@ -867,30 +707,12 @@ msgid "Tarif"
 msgstr "Tarif"
 
 msgctxt "view:contract:"
-msgid "Taux"
-msgstr "Taux"
-
-msgctxt "view:contract:"
 msgid "The current record completed the current process, please go ahead"
 msgstr "Processus Terminé. Commencez une nouvelle tâche"
 
 msgctxt "view:contract:"
-msgid ""
-"The current record is in a state (Validation de l'avenant) that you are not "
-"allowed to view."
-msgstr ""
-
-msgctxt "view:contract:"
-msgid "Validation de l'avenant"
-msgstr "Validation de l'avenant"
-
-msgctxt "view:contract:"
 msgid "Validation du contrat"
 msgstr "Validation du contrat"
-
-msgctxt "view:contract:"
-msgid "Validation du contrat Collectif"
-msgstr "Validation du contrat Collectif"
 
 msgctxt "view:process-process.step:"
 msgid "Process Relation"
