--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -224,7 +224,7 @@ msgstr "Texte surchargeable"
 
 msgctxt "field:contract.clause,rec_name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
 msgctxt "field:contract.clause,text:"
 msgid "Text"
@@ -475,8 +475,8 @@ msgstr "Description d'Option"
 
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,coverage_behaviour:"
-msgid "Behaviour"
-msgstr ""
+msgid "Subscription Behaviour"
+msgstr "Comportement à la Souscription"
 
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,id:"
@@ -486,7 +486,7 @@ msgstr "ID"
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,is_selected:"
 msgid "Selected?"
-msgstr ""
+msgstr "Coché?"
 
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,must_expand_tree:"
@@ -564,7 +564,7 @@ msgstr "Contrats"
 
 msgctxt "model:ir.action,name:option_subscription_wizard"
 msgid "Option Subscription"
-msgstr ""
+msgstr "Souscription d'Option"
 
 msgctxt "selection:contract,status:"
 msgid ""
@@ -657,6 +657,21 @@ msgstr "Refusé"
 msgctxt "selection:contract.status.history,status:"
 msgid "Terminated"
 msgstr "Terminé"
+
+msgctxt ""
+"selection:contract.wizard.option_subscription.options_displayer.option,coverage_behaviour:"
+msgid "Mandatory"
+msgstr "Obligatoire"
+
+msgctxt ""
+"selection:contract.wizard.option_subscription.options_displayer.option,coverage_behaviour:"
+msgid "Optional"
+msgstr "En Option"
+
+msgctxt ""
+"selection:contract.wizard.option_subscription.options_displayer.option,coverage_behaviour:"
+msgid "Proposed"
+msgstr "Proposé par Défaut"
 
 msgctxt "selection:document.template,kind:"
 msgid "Contract Documents"
